// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render Schema should render 1`] = `
<div>
  <div />
  <input
    name="foo"
    required={true}
    schema={
      Object {
        "meta": Object {
          "vis": Object {
            "component": "NumberInputField",
            "editable": true,
          },
        },
        "title": "Foo",
        "type": "number",
      }
    }
    styles={Object {}}
    type="number"
  />
  <input
    name="foobar"
    required={true}
    schema={
      Object {
        "description": "Foo is bar",
        "meta": Object {
          "vis": Object {
            "component": "EmailInputField",
            "editable": true,
          },
        },
        "title": "Foobar",
        "type": "string",
      }
    }
    styles={Object {}}
    type="email"
  />
  <input
    name="bar"
    required={true}
    schema={
      Object {
        "meta": Object {
          "vis": Object {
            "component": "InputField",
            "editable": true,
            "ordinal": 1,
          },
        },
        "required": true,
        "title": "Bar",
        "type": "string",
      }
    }
    styles={Object {}}
  />
  <div />
  <div />
</div>
`;

exports[`Render Schema should render single field schema 1`] = `
<input
  name="bar"
  namespace="bar"
  required={false}
  schema={
    Object {
      "meta": Object {
        "vis": Object {
          "component": "NumberInputField",
          "editable": true,
          "ordinal": 0,
        },
      },
      "title": "Foo",
      "type": "number",
    }
  }
  styles={Object {}}
  type="number"
/>
`;

exports[`Render Schema should render without name and with namespace 1`] = `
<div
  namespace="foo"
>
  <div
    namespace="foo"
  />
  <input
    name="foo.foo"
    namespace="foo"
    required={true}
    schema={
      Object {
        "meta": Object {
          "vis": Object {
            "component": "NumberInputField",
            "editable": true,
          },
        },
        "title": "Foo",
        "type": "number",
      }
    }
    styles={Object {}}
    type="number"
  />
  <input
    name="foo.foobar"
    namespace="foo"
    required={true}
    schema={
      Object {
        "description": "Foo is bar",
        "meta": Object {
          "vis": Object {
            "component": "EmailInputField",
            "editable": true,
          },
        },
        "title": "Foobar",
        "type": "string",
      }
    }
    styles={Object {}}
    type="email"
  />
  <input
    name="foo.bar"
    namespace="foo"
    required={true}
    schema={
      Object {
        "meta": Object {
          "vis": Object {
            "component": "InputField",
            "editable": true,
            "ordinal": 1,
          },
        },
        "required": true,
        "title": "Bar",
        "type": "string",
      }
    }
    styles={Object {}}
  />
  <div
    namespace="foo"
  />
  <div
    namespace="foo"
  />
</div>
`;

exports[`Render Schema should render without properties 1`] = `<div />`;

exports[`Render Schema should render without required fields 1`] = `
<div>
  <div />
  <input
    name="foo"
    required={false}
    schema={
      Object {
        "meta": Object {
          "vis": Object {
            "component": "NumberInputField",
            "editable": true,
          },
        },
        "title": "Foo",
        "type": "number",
      }
    }
    styles={Object {}}
    type="number"
  />
  <input
    name="foobar"
    required={false}
    schema={
      Object {
        "description": "Foo is bar",
        "meta": Object {
          "vis": Object {
            "component": "EmailInputField",
            "editable": true,
          },
        },
        "title": "Foobar",
        "type": "string",
      }
    }
    styles={Object {}}
    type="email"
  />
  <input
    name="bar"
    required={true}
    schema={
      Object {
        "meta": Object {
          "vis": Object {
            "component": "InputField",
            "editable": true,
            "ordinal": 1,
          },
        },
        "required": true,
        "title": "Bar",
        "type": "string",
      }
    }
    styles={Object {}}
  />
  <div />
  <div />
</div>
`;
